[package]
name = "rocket"
version = "1.0.0"
authors = ["Adolfo Ochagavía <aochagavia92@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
clippy = { version = "0.0.118", optional = true }
itertools-num = "0.1.1"
lazy_static = "1.0"
rand = "0.3.18"
pcg_rand = "0.7.1"

[patch.crates-io]
rand = { git = "https://github.com/aochagavia/rand.git", branch = "wasm" }

[features]
default = []
